--- a/package.json
+++ b/package.json
@@ -15,7 +15,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "jest": "^23.1.0"
-  }
+  "devDependencies": {}
 }
